# finbot-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
finbot_dashboard/: __init__.py  charts.py  config.py  data_access.py  data_loader.py  formatting.py  metrics.py  ui.py
tests/: test_data_access.py  test_metrics.py
