[project]
name = "finbot-dashboard"
version = "0.1.0"
description = "A read-only Streamlit dashboard for local Finbot stock research."
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
